--- a/app/src/main/res/layout/fragment_student_settings.xml
+++ b/app/src/main/res/layout/fragment_student_settings.xml
@@ -77,7 +77,9 @@
                 <ImageView
                     android:id="@+id/imgAvatar"
                     android:layout_width="67dp"
+
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="35dp"
                     android:src="@drawable/avatar2" />
 
                 <LinearLayout
@@ -86,10 +88,12 @@
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:paddingStart="12dp">
+
                     <TextView
                         android:id="@+id/tvStudentName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingLeft="12dp"
                         android:text="Student Name"
                         android:textColor="#000"
                         android:textSize="18sp"
@@ -156,14 +160,10 @@
                     </LinearLayout>
 
 
-
-
-
-
                     <Button
                         android:id="@+id/btnAboutUs"
-                        android:layout_width="150dp"
-                        android:layout_height="48dp"
+                        android:layout_width="147dp"
+                        android:layout_height="37dp"
                         android:backgroundTint="#A9ADB0"
                         android:text="About Us"
                         app:icon="@drawable/aboutus" />
