--- a/app/src/main/res/layout/activity_registrar_main.xml
+++ b/app/src/main/res/layout/activity_registrar_main.xml
@@ -95,7 +95,10 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header"
-            app:menu="@menu/nav_drawer_registrar_menu" />
+            app:itemIconTint="@color/dark_red"
+            app:itemTextColor="@color/dark_red"
+
+        app:menu="@menu/nav_drawer_registrar_menu" />
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <!-- Bottom Navigation -->
