--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
 <!--        <domain includeSubdomains="true">192.168.1.14</domain>-->
-        <domain includeSubdomains="true">192.168.56.1</domain>
+        <domain includeSubdomains="true">almushtaraka.atwebpages.com</domain>
     </domain-config>
 </network-security-config>
